--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+CAMPFIRE_ROOM_ID=xxxx
+CAMPFIRE_TOKEN="****"
 DEPLOYHOOKS_HTTP_URL=http://localhost:9292/%s
 HEROKU_API_KEY='CHANGE_MEsdfasdfasdfasdfasdfasdfasdfasd'
 PORT=9292
